# bevy_sdf_klown

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: ray_marching.wgsl  upscale.wgsl
bevy_sdf_klown_derive/: Cargo.toml
bevy_sdf_klown_derive/src/: lib.rs
crate_examples/bunch_of_modifiers/: Cargo.toml
crate_examples/bunch_of_modifiers/src/: main.rs
crate_examples/dna_modifiers/: Cargo.toml
crate_examples/dna_modifiers/src/: main.rs
crate_examples/fractal_showcase/: Cargo.toml
crate_examples/fractal_showcase/src/: main.rs
crate_examples/simple_scene/: Cargo.toml
crate_examples/simple_scene/src/: main.rs
crate_examples/sss_material/: Cargo.toml
crate_examples/sss_material/src/: main.rs
examples/: bunch_of_modifier.rs  fractal_showcase.rs  simple_scene.rs  sss_material.rs
examples/bunch_of_modifier/: Cargo.toml
examples/bunch_of_modifier/src/: main.rs
examples/fractal_showcase/: Cargo.toml
examples/fractal_showcase/src/: main.rs
examples/simple_scene/: Cargo.toml
examples/simple_scene/src/: main.rs
src/: lib.rs
src/engine/: blit_pass.rs  buffer.rs  camera.rs  end_pass.rs  hierarchy.rs  mod.rs  nodes.rs  object.rs  op.rs  pipeline.rs  prepare.rs  prepass.rs  shape.rs  upscale.rs  write_back.rs
src/shaders/: bindings.wgsl  blit.wgsl  core.wesl  ray_march.wesl  ray_march.wgsl  selectors.wesl  selectors.wgsl  types.wesl  types.wgsl  upscale.wesl  upscale.wgsl  utils.wesl  utils.wgsl  write_back.wgsl
