[package]
name = "bevy_sdf_klown"
version = "0.1.1"
edition = "2024"
authors = ["Audrick Yeu <audrickyeu@proton.me>"]
description = "General Pupose sdf plugin for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klownie/bevy_sdf_klown"
readme = "README.md"
keywords = ["bevy", "sdf", "graphics", "ray_marching"]
categories = ["graphics", "rendering", "games"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_asset",
    "bevy_color", 
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi_threaded",
]}
bevy_egui = "0.34"
bevy-inspector-egui = "0.31"
bevy_panorbit_camera = "0.27.0"


log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
