[package]
name = "bevy_sdf_klown"
version = "0.2.0"
edition = "2024"
authors = ["Audrick Yeu <audrickyeu@proton.me>"]
description = "General Pupose sdf plugin for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klownie/bevy_sdf_klown"
readme = "README.md"
keywords = ["bevy", "sdf", "graphics", "ray_marching"]
categories = ["graphics", "rendering", "games"]

[features]
skein = []

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_asset",
    "zstd_rust",
    "bevy_color",
    "reflect_auto_register",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_log",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_shader",
    "default_font",
    "hdr",
    "tonemapping_luts",
    "multi_threaded",
    "wayland"
]}
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
