[package]
name = "bevy_sdf_klown"
version = "0.3.0-rc.2"
edition = "2024"
authors = ["Audrick Yeu <audrickyeu@proton.me>"]
description = "General Pupose sdf plugin for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/klownie/bevy_sdf_klown"
readme = "README.md"
keywords = ["bevy", "sdf", "graphics", "ray_marching"]
categories = ["graphics", "rendering", "games"]

[features]
skein = []

[dependencies]
bevy = { version = "0.18.0-rc.2", default-features = false, features = [
    "bevy_asset",
    "zstd_rust",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_log",
    "bevy_shader",
    "hdr",
]}
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
bevy_sdf_klown_derive = { path = "bevy_sdf_klown_derive" }
