[package]
name = "simple_scene"
edition = "2024"

[features]
skein = []

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_asset",
    "zstd_rust",
    "bevy_color",
    "reflect_auto_register",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_log",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_shader",
    "default_font",
    "gamepad",
    "hdr",
    "tonemapping_luts",
    "bevy_camera_controller",
    "free_camera",
    "multi_threaded",
    "wayland"
]}
bevy_sdf_klown = { path = "../../"}
bevy_egui = "0.38"
bevy-inspector-egui = "0.35"


