[package]
name = "simple_scene"
edition = "2024"

[features]
skein = []

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_asset",
    "zstd_rust",
    "bevy_color",
    "reflect_auto_register",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_log",
    "bevy_ui",
    "bevy_window",
    "bevy_winit",
    "bevy_shader",
    "default_font",
    "hdr",
    "tonemapping_luts",
    "multi_threaded",
    "wayland"
]}
bevy_sdf_klown = { path = "../../"}
bevy_egui = "0.38"
bevy-inspector-egui = "0.35"
bevy_panorbit_camera = "0.33"


